--- a/public/html/workandeducation.html
+++ b/public/html/workandeducation.html
@@ -3,19 +3,19 @@
         <div class="col-md-12">
           <ul class="media-list">
             <li class="media">
-              <a class="pull-left" href=""><img ng-src="http://www.wbfn.org/home/sites/default/files/work%20icon.jpg" height="44" width="44"></a>
+              <a class="pull-left" href=""><img ng-src="/images/work_icon.jpg" height="44" width="44"></a>
               <div class="media-body">
                 <h4 class="media-heading">Employee at {{user.COMPANY}}</h4>
               </div>
             </li>
             <li class="media">
-              <a class="pull-left" href=""><img class="media-object" ng-src="https://cdn4.iconfinder.com/data/icons/everyday-objects-1/128/graduation-cap-512.png" height="44" width="44"></a>
+              <a class="pull-left" href=""><img class="media-object" ng-src="/images/college_icon.png" height="44" width="44"></a>
               <div class="media-body">
                 <h4 class="media-heading">Studied at {{user.COLLEGE}}</h4>
               </div>
             </li>
             <li class="media">
-              <a class="pull-left" href=""><img class="media-object" ng-src="http://us.123rf.com/450wm/jehsomwang/jehsomwang1405/jehsomwang140500382/28745574-school-building-icon.jpg?ver=6" height="44" width="44"></a>
+              <a class="pull-left" href=""><img class="media-object" ng-src="/images/high-school-building-icon.jpg" height="44" width="44"></a>
               <div class="media-body">
                 <h4 class="media-heading">High School in {{user.HIGH_SCHL}}</h4>
               </div>
